# infer

docker/atomer-v1.0.0/: Dockerfile  run.bat
docker/atomer-v1.0.0-bin/: Dockerfile  run.sh
docker/atomer-v2.0.0/: Dockerfile  run.sh
docker/atomer-v2.0.0-bin/: Dockerfile  run.bat
infer/documentation/issues/: DEADLOCK_L2D2.md
infer/man/man1/: infer-analyze.txt  infer-full.txt  infer-report.txt  infer.txt
infer/src/: .ocamlformat  Makefile  dune.in
infer/src/absint/: AnalysisCallbacks.ml  AnalysisCallbacks.mli  ConcurrencyModels.ml  ConcurrencyModels.mli
infer/src/atomicity/: AtomicSets.ml  AtomicSets.mli  AtomicSetsDomain.ml  AtomicSetsDomain.mli  AtomicityUtils.ml  AtomicityUtils.mli  AtomicityViolations.ml  AtomicityViolations.mli  AtomicityViolationsDomain.ml  AtomicityViolationsDomain.mli  dune
infer/src/backend/: CallbackOfChecker.ml  Payloads.ml  Payloads.mli  Summary.ml  Summary.mli  dune  registerCheckers.ml
infer/src/base/: Checker.ml  Checker.mli  Config.ml  Config.mli  IssueType.ml  IssueType.mli  ResultsDirEntryName.ml  ResultsDirEntryName.mli
infer/src/checkers/: IntervalChecker.ml  IntervalChecker.mli  IntervalCheckerDomain.ml  IntervalCheckerDomain.mli
infer/src/concurrency/: Darc.ml  Darc.mli  DarcDomain.ml  DarcDomain.mli  Deadlock.ml  DeadlockDomain.ml  RacerDProcAnalysis.ml  starvation.ml
