; Author: Dominik Harmim <xharmi00@stud.fit.vutbr.cz>

(library
 (name Atomicity)
 (public_name infer.Atomicity)
 (flags
  (:standard -open Core -open IR -open IStdlib -open IStd -open ATDGenerated
    -open IBase -open Absint))
 (libraries core IStdlib ATDGenerated IBase IR Absint)
 (preprocess
  (pps ppx_compare)))
